RESOLVED FIXED57268
WebKit2: Downloads started with DownloadCFNet::start never start
https://bugs.webkit.org/show_bug.cgi?id=57268
Summary WebKit2: Downloads started with DownloadCFNet::start never start
Brian Weinstein
Reported 2011-03-28 14:29:48 PDT
If a download is started with DownloadCFNet::start in WebKit2, it never starts. This is because we were never calling CFURLDownloadStart on the download. <rdar://problem/9031294>
Attachments
[PATCH] Fix (1.34 KB, patch)
2011-03-28 14:30 PDT, Brian Weinstein
jhoneycutt: review+
Brian Weinstein
Comment 1 2011-03-28 14:30:59 PDT
Created attachment 87208 [details] [PATCH] Fix
Brian Weinstein
Comment 2 2011-03-28 14:33:01 PDT
Landed in r82157.
Note You need to log in before you can comment on or make changes to this bug.