WebKit2: Downloads started with DownloadCFNet::start never start https://bugs.webkit.org/show_bug.cgi?id=57268

Reviewed by Jon Honeycutt.

* WebProcess/Downloads/cfnet/DownloadCFNet.cpp:
(WebKit::Download::start): Call CFURLDownloadStart on the download we create.



Canonical link: https://commits.webkit.org/71959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82157 268f45cc-cd09-0410-ab3c-d52691b4dbfc